--- a/package.json
+++ b/package.json
@@ -17,11 +17,16 @@
   },
   "homepage": "https://github.com/nagulakshmi/playwright-cucumber-ui-test-framework#readme",
   "dependencies": {
-    "@cucumber/cucumber": "^10.0.1",
+    "@cucumber/cucumber": "^8.4.0",
+    "@types/node": "^20.9.3",
     "config": "^3.3.9",
     "del": "^7.1.0",
     "playwright": "^1.40.0",
     "ts-node": "^10.9.1",
-    "typescript": "^5.3.2"
+    "typescript": "^5.3.2",
+    "winston": "^3.11.0"
+  },
+  "devDependencies": {
+    "@types/config": "^3.3.3"
   }
 }
