--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": ". ./set_env.sh && cucumber-js"
+    "check-types": "npx tsc --project tsconfig.json --noemit",
+    "test": ". ./set_env.sh && cucumber-js",
+    "lint": "eslint . --fix --ext .ts,.tsx && npm run check-types"
   },
   "repository": {
     "type": "git",
@@ -21,12 +23,19 @@
     "@types/node": "^20.9.3",
     "config": "^3.3.9",
     "del": "^7.1.0",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-ui-testing": "^2.0.1",
     "playwright": "^1.40.0",
+    "prettier-eslint": "^16.1.2",
     "ts-node": "^10.9.1",
     "typescript": "^5.3.2",
     "winston": "^3.11.0"
   },
   "devDependencies": {
-    "@types/config": "^3.3.3"
+    "@types/config": "^3.3.3",
+    "@typescript-eslint/eslint-plugin": "^6.12.0",
+    "@typescript-eslint/parser": "^6.12.0",
+    "eslint": "^8.54.0",
+    "eslint-plugin-playwright": "^0.18.0"
   }
 }
