--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "check-types": "npx tsc --project tsconfig.json --noemit",
     "test": ". ./set_env.sh && cucumber-js",
+    "generate:report": "ts-node ./support/report.ts",
     "lint": "eslint . --fix --ext .ts,.tsx && npm run check-types"
   },
   "repository": {
@@ -22,16 +23,19 @@
     "@cucumber/cucumber": "^8.4.0",
     "@types/node": "^18.0.3",
     "config": "^3.3.9",
+    "cucumber-html-reporter": "^7.1.1",
     "del": "^7.1.0",
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-ui-testing": "^2.0.1",
     "playwright": "^1.40.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.3.2",
+    "uuid": "^9.0.1",
     "winston": "^3.8.1"
   },
   "devDependencies": {
     "@types/config": "^3.3.3",
+    "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
     "eslint": "^8.54.0",
